--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,17 @@ h2 {
   position: absolute;
   bottom: 0;
 }
+
+#legend {
+  position: absolute;
+  right: 0;
+  top: 150px;
+}
+
+#legend p {
+  font: 1rem "Lobster", Helvetica, san-serif;
+}
+
+.axis path {
+  fill: None;
+}
