--- a/css/style.css
+++ b/css/style.css
@@ -39,5 +39,33 @@ h2 {
 }
 
 .axis path {
-  fill: None;
+  fill: none;
+}
+
+#map {
+  margin-bottom: 2rem;
+}
+
+text {
+  pointer-event: none;
+}
+
+.states {
+  fill: #333;
+}
+
+.states :hover {
+  stroke: #333;
+  stroke-width: 2px;
+}
+
+.place,
+.place-label {
+  fill: #363636;
+}
+
+.d3-tip {
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.7);
+  color: #e2e3e3;
 }
